<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/custom_adapter_padding"
    android:paddingStart="@dimen/custom_adapter_padding"
    android:paddingTop="@dimen/custom_adapter_padding">

        <!--Product Name row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textViewEditProductName"
                android:text="@string/product_name"
                android:textSize="@dimen/listView_text_size"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/editProductName"
                android:textSize="@dimen/listView_text_size"
                android:layout_marginStart="@dimen/custom_adapter_padding"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <!--Brand Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textViewEditBrand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/brand"
                android:textSize="@dimen/listView_text_size" />

            <TextView
                android:id="@+id/editBrand"
                android:textSize="@dimen/listView_text_size"
                android:layout_marginStart="@dimen/custom_adapter_padding"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!--Price Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textViewEditPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/price"
                android:textSize="@dimen/listView_text_size" />

            <TextView
                android:id="@+id/editPrice"
                android:textSize="@dimen/listView_text_size"
                android:layout_marginStart="@dimen/custom_adapter_padding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <!--Color Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textViewEditColor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/color"
                android:textSize="@dimen/listView_text_size" />

            <TextView
                android:id="@+id/editColor"
                android:textSize="@dimen/listView_text_size"
                android:layout_marginStart="@dimen/custom_adapter_padding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <!--Stock Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textViewEditStock"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/stock"
                android:textSize="@dimen/listView_text_size" />

            <TextView
                android:id="@+id/editStock"
                android:textSize="@dimen/listView_text_size"
                android:layout_marginStart="@dimen/custom_adapter_padding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent" android:gravity="center"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:paddingTop="16dp" android:paddingBottom="16dp">
            <Button
                android:id="@+id/ButtonBuyStock"
                android:text="@string/buy_stock"
                android:background="@color/baby_blue"
                android:layout_marginEnd="@dimen/button_margins"
                android:layout_marginBottom="@dimen/button_margins"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height" />

            <Button
                android:id="@+id/ButtonSellStock"
                android:text="@string/sell_stock"
                android:background="@color/baby_blue"
                android:layout_marginStart="@dimen/button_margins"
                android:layout_marginBottom="@dimen/button_margins"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonSellAll"
            android:text="@string/sell_all"
            android:background="@color/baby_blue"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height" />

        <Button
            android:id="@+id/ButtonDeleteItem"
            android:text="@string/delete_item"
            android:background="@color/light_red"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height" />
</LinearLayout>
</ScrollView>