<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/custom_adapter_padding"
        android:paddingStart="@dimen/custom_adapter_padding"
        android:paddingTop="@dimen/custom_adapter_padding">

        <!--Product Name row-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/product_name"
                android:textSize="@dimen/listView_text_size" />

            <EditText
                android:id="@+id/editTextProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:minWidth="@dimen/editText_min_width" />
        </RelativeLayout>


        <!--Brand Row-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/brand"
                android:textSize="@dimen/listView_text_size" />

            <EditText
                android:id="@+id/editTextBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:minWidth="@dimen/editText_min_width" />
        </RelativeLayout>

        <!--Price Row-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/price"
                android:textSize="@dimen/listView_text_size" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:minWidth="@dimen/editText_min_width" />
        </RelativeLayout>

        <!--Color Row-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/color"
                android:textSize="@dimen/listView_text_size" />

            <EditText
                android:id="@+id/editTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:minWidth="@dimen/editText_min_width" />
        </RelativeLayout>

        <!--Stock Row-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/stock"
                android:textSize="@dimen/listView_text_size" />

            <EditText
                android:id="@+id/editTextStock"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:minWidth="@dimen/editText_min_width" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/baby_blue"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>